<resources>
    <string name="app_name">Blockcerts</string>
    <string name="home_issuers">Blockcerts Wallet</string>
    <string name="home_settings_menu_item_title">Settings</string>
    <string name="onboarding_welcome">Welcome message goes here</string>
    <string name="onboarding_new_user">New User</string>
    <string name="onboarding_returning_user">Current User</string>
    <string name="play_intro_video">Play introductory video</string>
    <string name="onboarding_passphrase_status_0">Generating your new passphrase...</string>
    <string name="onboarding_passphrase_status_1">Passphrase Generated!</string>
    <string name="onboarding_passphrase_description">This is the passphrase to your wallet. You must have a backup in case you reinstall or switch devices.</string>
    <string name="onboarding_passphrase">Passphrase</string>
    <string name="onboarding_passphrase_create_backup">Create a Backup</string>
    <string name="onboarding_backup_methods">Select Backup Methods</string>
    <string name="onboarding_backup_description">Please select at least two options from the choices below.</string>
    <string name="onboarding_backup_write_button">Manual Hardcopy</string>
    <string name="onboarding_backup_save_button">Save to Device</string>
    <string name="onboarding_backup_email_button">Copy to E-Mail or Clipboard</string>
    <string name="onboarding_backup_done_button">Done</string>
    <string name="onboarding_paste_passphrase_title">Enter your passphrase</string>
    <string name="onboarding_paste_passphrase_desc">Please type or paste your passphrase here:</string>
    <string name="onboarding_paste_passphrase_done">Enter</string>
    <string name="onboarding_paste_passphrase_hint">Tap to enter passphrase</string>
    <string name="onboarding_paste_passphrase_load_0">Looking for passphrase...</string>
    <string name="onboarding_paste_passphrase_load_1">Passphrase found, loading...</string>
    <string name="onboarding_paste_passphrase_load_2">Enter Your Passphrase</string>
    <string name="onboarding_welcome_title">Welcome to the new Blockcerts Wallet!</string>
    <string name="onboarding_welcome_desc">We\'ve improved the experience, but you\'ll be able to receive and manage your credentials as before.\n\nPlease note that you are now required to back up your passphrase, but you can do so easily in the app!</string>
    <string name="onboarding_welcome_button_title">Continue</string>
    <string name="onboarding_home_no_issuers_title">Ready!</string>
    <string name="onboarding_home_no_issuers_desc_new_user">You will receive an email when an issuer is ready to be added. Follow the link in the email to complete the process.</string>
    <string name="onboarding_home_no_issuers_title_returning_user">Re-import your credentials</string>
    <string name="onboarding_home_no_issuers_desc_returning_user">To see your issuers, go to Settings to add your credentials or add them via the email from the issuer.</string>
    <string name="onboarding_home_no_issuers_desc2">You may add an issuer manually by visiting Settings and tapping Add an Issuer</string>
    <string name="issuer_no_certificates_desc">No Credentials</string>
    <string name="issuer_no_certificates_desc2">You will receive an email when a credential is issued. Follow the link in the email to complete the process. Or add a credential manually.</string>
    <string name="fragment_issuer_title">Issuer</string>
    <string name="issuer_info_title">Issuer Info</string>
    <string name="issuer_info_menu_item_title">Info</string>
    <string name="fragment_issuer_info_title">Issuer Name</string>
    <string name="fragment_issuer_info_email">Issuer Contact Email</string>
    <string name="fragment_issuer_info_introduced_on">Introduced on</string>
    <string name="fragment_issuer_info_shared_address">Shared Address</string>
    <string name="fragment_issuer_info_url">URL</string>
    <string name="fragment_issuer_info_description">Description</string>
    <string name="fragment_issuer_info_additional_information">Additional Info</string>
    <string name="fragment_verify_cert_chain_format" formatted="true">Verifying %1$s</string>
    <string name="cert_verification_step0">Beginning verification process</string>
    <string name="cert_verification_step1">Comparing computed hash with expected hash</string>
    <string name="cert_verification_step2">Ensuring the Merkle receipt is valid</string>
    <string name="cert_verification_step3">Comparing expected Merkle root with value on the blockchain</string>
    <string name="cert_verification_step4">Checking if the credential has been revoked</string>
    <string name="cert_verification_step5">Validating issuer identity</string>
    <string name="cert_verification_step6">Checking expiration</string>
    <string name="cert_verification_step1_could_not_create_temp_file">Couldn\'t create a temp file for JSONLD normalization</string>
    <string name="cert_verification_step1_could_not_save_document">Couldn\'t save the credential document node</string>
    <string name="error_no_internet">No Network</string>
    <string name="error_no_engine">Unable to load the verification engine.</string>
    <string name="error_invalid_certificate_json">The credential json is erroneous</string>
    <string name="error_invalid_certificate_normalize_json">Unable to normalize the credential JSON-LD</string>
    <string name="error_remote_and_local_hash_mismatch">The credential\'s local hash does not match the credential\'s remote hash</string>
    <string name="error_cannot_load_certificate_json">Could not load the credential file</string>
    <string name="error_mainnet_step1_reason">Computed hash does not match expected hash. This credential may have been altered. Please contact the issuer.</string>
    <string name="error_mainnet_step2_reason">The Merkle receipt is not valid. Please contact the issuer.</string>
    <string name="error_mainnet_step3_reason">Merkle root does not match the hash value on the blockchain. Please contact the issuer.</string>
    <string name="error_mainnet_step4_reason">Transaction occurred when the issuing address was not considered valid. Please contact the issuer.</string>
    <string name="error_mainnet_step5_reason">This credential was revoked by the issuer.</string>
    <string name="error_mainnet_step6_reason">This credential expired</string>
    <string name="success_mainnet_verification">Your credential has been successfully verified.</string>
    <string name="error_testnet_step1_reason">Computed hash does not match expected hash. This test credential may have been altered. Please contact the issuer.</string>
    <string name="error_testnet_step2_reason">The Merkle receipt is not valid. Please contact the issuer.</string>
    <string name="error_testnet_step3_reason">Merkle root does not match the hash value on the blockchain. Please contact the issuer.</string>
    <string name="error_testnet_step4_reason">Transaction occurred when the issuing address was not considered valid. Please contact the issuer.</string>
    <string name="error_testnet_step5_reason">This test credential was revoked by the issuer.</string>
    <string name="error_testnet_step6_reason">This test credential is expired</string>
    <string name="success_testnet_verification">Your test credential has been successfully verified.</string>
    <string name="error_mocknet_step1_reason">Computed hash does not match expected hash. This mock credential may have been altered. Please contact the issuer.</string>
    <string name="error_mocknet_step2_reason">The Merkle receipt is not valid. Please contact the issuer.</string>
    <string name="error_mocknet_step3_reason">Merkle root does not match the hash value on the blockchain. Please contact the issuer.</string>
    <string name="error_mocknet_step4_reason">Transaction occurred when the issuing address was not considered valid. Please contact the issuer.</string>
    <string name="error_mocknet_step5_reason">This mock credential was revoked by the issuer.</string>
    <string name="error_mocknet_step6_reason">This mock credential is expired</string>
    <string name="success_mocknet_verification">This mock credential passed all checks. Mocknet mode is only used by issuers to test their workflow locally. This credential was not recorded to a blockchain and should not be considered a verified credential.</string>
    <string name="error_unknown_chain_reason">This credential is not a mainnet, testnet, or mocknet credential and cannot be verified.</string>
    <string name="error_unknown_reason">This credential failed verification for an unknown reason.</string>
    <string name="certificate_share_button">Share</string>
    <string name="certificate_verify_button">Verify this credential</string>
    <string name="certificate_delete_button">Delete Credential</string>
    <string name="settings_add_issuer">Add an Issuer</string>
    <string name="settings_add_credential">Add a Credential</string>
    <string name="settings_reveal_passphrase">My Passphrase</string>
    <string name="settings_about_passphrases">About Passphrases</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_privacy_policy_endpoint">http://www.learningmachine.com/mobile-privacy/</string>
    <string name="settings_email_logs">Email Logs</string>
    <string name="settings_logout">Log out and Reset</string>
    <string name="settings_logout_title">Log out and Clear Device</string>
    <string name="settings_logout_message">Logging out will remove all of your credentials and any stored passphrases on this device.</string>
    <string name="settings_logout_button_title">Log out</string>
    <string name="add_certificate_import">Import</string>
    <string name="add_certificate_by_file">Import from File</string>
    <string name="add_certificate_by_url">Import from URL</string>
    <string name="certificate_add_url_label">Copy and paste the credential URL:</string>
    <string name="certificate_add_url_edit_text_hint">Credential URL</string>
    <string name="fragment_add_certificate_file_label">What is the File of the credential?</string>
    <string name="framgent_add_certificate_file_choose_file_button_title">Choose File</string>
    <string name="fragment_add_certificate_title">Add Credential</string>
    <string name="fragment_add_certificate_progress_dialog_message">Adding Credential</string>
    <string name="fragment_add_certificate_alert_dialog_success_title">Success!</string>
    <string name="ime_action_done">Done</string>
    <string name="onboarding_generate_password_title">New Account</string>
    <string name="onboarding_generate_password_description">If you ever lose your phone, you will need this passphrase to recover your records.</string>
    <string name="onboarding_generate_password_button">Generate Passphrase</string>
    <string name="fragment_home_empty_title">You are ready!</string>
    <string name="fragment_home_empty_description">Check email inbox for invitation email from your issuing institution to add your credential.</string>
    <string name="fragment_home_empty_action">Add Issuer</string>
    <string name="settings_passphrase_header">Passphrase</string>
    <string name="settings_about_header">About</string>
    <string name="settings_about_this_app">About this app</string>
    <string name="fragment_add_issuer_info_url_text">Add the URL given by your Issuer.</string>
    <string name="fragment_add_issuer_url">Issuer URL</string>
    <string name="fragment_add_issuer_identity_text">Add your one-time code.</string>
    <string name="fragment_add_issuer_add_identity">One-time Code</string>
    <string name="certificate_verify_menu_item_title">Verify</string>
    <string name="certificate_share_menu_item_title">Share</string>
    <string name="certificate_info_menu_item_title">Info</string>
</resources>