<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="@dimen/onboarding_logo_margin_top"
            android:contentDescription="@null"
            android:src="@drawable/ic_splash"/>

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/Material.Title.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_generate_password_title"
                android:textAllCaps="true"/>

            <TextView
                style="@style/Material.Light.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:text="@string/onboarding_generate_password_description"/>

            <Button
                android:id="@+id/generate_passphrase"
                style="@style/OnboardingButton.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:paddingBottom="8dp"
                android:paddingEnd="48dp"
                android:paddingStart="48dp"
                android:paddingTop="8dp"
                android:text="@string/onboarding_generate_password_button"/>

        </LinearLayout>
    </FrameLayout>
</layout>