<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="@dimen/onboarding_logo_margin_top"
            android:contentDescription="@null"
            android:src="@drawable/ic_splash_dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/onboarding_generate_container_margin_top"
            android:text="@string/onboarding_generate_password_title"
            android:textAllCaps="true"
            style="@style/Material.Title.Light"/>

        <TextView
            android:layout_width="@dimen/onboarding_generate_passphrase_textive_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/onboarding_generate_title_margin_top"
            android:gravity="center"
            android:text="@string/onboarding_generate_password_description"
            style="@style/Material.Light.Body1"/>

        <Button
            android:id="@+id/generate_passphrase"
            android:layout_width="@dimen/onboarding_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/onboarding_generate_passphrase_button_margin_top"
            android:paddingBottom="@dimen/onboarding_button_padding_vertical"
            android:paddingEnd="@dimen/onboarding_button_padding_horizontal"
            android:paddingStart="@dimen/onboarding_button_padding_horizontal"
            android:paddingTop="@dimen/onboarding_button_padding_vertical"
            android:text="@string/onboarding_generate_password_button"
            style="@style/RoundedButton.Light"/>

    </LinearLayout>

</layout>