<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/dialog_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <View
            android:id="@+id/spreader1"
            android:layout_width="65dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toTopOf="@+id/image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_welcom_back"
            app:layout_constraintTop_toBottomOf="@+id/spreader1"
            app:layout_constraintBottom_toTopOf="@+id/titleView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleView"
            style="@style/Text.Title.1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/onboarding_welcome_title"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/messageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view" />

        <TextView
            android:id="@+id/messageView"
            style="@style/Text.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/onboarding_welcome_desc"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/spreader2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleView" />

        <View
            android:id="@+id/spreader2"
            android:layout_width="65dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/messageView"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/continue_button"
            style="@style/RoundedButton.Dark"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/onboarding_welcome_button_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="82dp" />

    </android.support.constraint.ConstraintLayout>


</layout>